[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud_controller.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/InventoryPanel.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/CraftingPanel.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ui/LoreJournalPanel.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/ui/MarketplacePanel.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/ui/ObjectivePanel.tscn" id="6"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="DamageFlash" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2
color = Color(0.92, 0.05, 0.05, 0)

[node name="StatsLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = 14.0
offset_right = 540.0
offset_bottom = 38.0
text = ""

[node name="CompassLabel" type="Label" parent="."]
anchors_preset = 10
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_top = 14.0
offset_right = 360.0
offset_bottom = 38.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1
text = ""

[node name="DebugPanel" type="Panel" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_top = 44.0
offset_right = -16.0
offset_bottom = 264.0
grow_horizontal = 0

[node name="DebugVBox" type="VBoxContainer" parent="DebugPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -8.0

[node name="DebugTitle" type="Label" parent="DebugPanel/DebugVBox"]
text = "Debug Overlay (F3)"

[node name="DebugBody" type="RichTextLabel" parent="DebugPanel/DebugVBox"]
bbcode_enabled = false
fit_content = true
scroll_active = false
text = ""

[node name="HelpLabel" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -56.0
offset_right = -16.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
text = ""

[node name="MessageLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = 66.0
offset_right = 920.0
offset_bottom = 90.0
text = ""

[node name="BottomHUDBackground" type="ColorRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -154.0
offset_bottom = 0.0
color = Color(0, 0, 0, 0.35)

[node name="RouteLabel" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -150.0
offset_right = -16.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
text = ""

[node name="ObjectiveLabel" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -128.0
offset_right = -16.0
offset_bottom = -106.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
text = ""

[node name="WorldStatusLabel" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -104.0
offset_right = -16.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
text = ""

[node name="MovementLabel" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -30.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
text = ""

[node name="InteractionLabel" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -80.0
offset_right = -16.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
text = ""

[node name="Crosshair" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -15.0
offset_right = 8.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
text = "+"

[node name="TargetStatusLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = 22.0
offset_right = 240.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
text = ""

[node name="InventoryPanel" parent="." instance=ExtResource("2")]

[node name="ObjectivePanel" parent="." instance=ExtResource("6")]

[node name="CraftingPanel" parent="." instance=ExtResource("3")]

[node name="LoreJournalPanel" parent="." instance=ExtResource("4")]

[node name="MarketplacePanel" parent="." instance=ExtResource("5")]

[node name="CompletionPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -136.0
offset_right = 280.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CompletionPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 12.0
offset_right = -14.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CompletionPanel/VBox"]
horizontal_alignment = 1
text = "Celadora v0.1 Completed"

[node name="Summary" type="RichTextLabel" parent="CompletionPanel/VBox"]
size_flags_vertical = 3
bbcode_enabled = false
fit_content = false
scroll_active = true
text = ""

[node name="Meta" type="Label" parent="CompletionPanel/VBox"]
horizontal_alignment = 1
text = ""
